crates/compiler/src/tests/e2e/good/0201_basic_bindings_and_print/main.gom
fn main() {
    let a: int8 = 1;
    println(int8_to_string(a));
}
