crates/compiler/src/tests/e2e/bad/0567_continue_in_closure_inside_while/main.gom
fn main() {
    while true {
        let skipper = || {
            continue
        };
        skipper();
        break;
    }
}
